<resources>
    <string name="app_name">My Application</string>

    <string name="login_label">Login</string>
    <string name="login_get_started">Get started</string>
    <string name="login_headline">Manage your freelance business with us!</string>
    <string name="login_description">Taken less than 10 minutes to fill out all the information needed to start your business.</string>
    <string name="login_email">E-mail</string>
    <string name="login_password">Password</string>
    <string name="login_hint_email">Must be valid e-mail</string>
    <string name="login_hint_password">Must be at least 6 length</string>
    <string name="login_caption">By signing up you are agreeing to our</string>
    <string name="login_terms_and_conditions">Terms and Conditions</string>

    <string name="word_label">Word</string>

    <string name="detail_label">Detail</string>
</resources>